# gfkit

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  experiment.py  requirements.txt  tugboat.py
.github/workflows/: build.yml  cmake.yml
benchmarks/: BenchmarkRunner.hpp  CMakeLists.txt  ResultsPrinter.hpp  benchmark.cpp  benchmark.hpp  compress.cpp  compress.hpp  dataset_stats.cpp  dataset_stats.hpp  estimate-forest-dag-compression-ratio.cpp  load-tdt.cpp  perf.hpp  print_ds_stats.cpp  print_ds_stats.hpp  sfkit-bench.cpp  sfkit.cpp  timer.hpp
cmake/: CCache.cmake  Sanitizers.cmake
data/: .gitignore  Snakefile  allele-frequency-spectrum-simple-example-0.trees  allele-frequency-spectrum-simple-example-1.trees  allele-frequency-spectrum-simple-example-2.trees  allele-frequency-spectrum-simple-example-3.trees  allele-frequency-spectrum-simple-example-4.trees  allele-frequency-spectrum-simple-example-6.trees  compressed-forest-is-sample.trees  empirical-datasets.csv  four-population-datasets.csv  generate-tree-sequence.py  generated-pop100-seq100000-ind100-seed0001.trees  generated-pop100-seq100000000-ind10-seed0001.trees  generated-pop10000-seq10000-ind20-seed0001.trees  generated-pop10000-seq100000-ind1000-seed0001.trees  generated-pop10000-seq10000000-ind20-seed0001.trees  random-names.txt  scaling-datasets.csv  simulate-scaling-datasets.py  simulate-scaling-datasets.sh  simulate-tree-sequences.py  single-population-datasets.csv  test-banzai.trees  test-ed.trees  test-mufasa.trees  test-nala.trees  test-pumbaa.trees  test-rafiki.trees  test-sarabi.trees  test-sarafina.trees  test-scar.trees  test-shenzi.trees  test-timon.trees  test-zuzu.trees  two-population-datasets.csv
experiments/data/: sgdp_chr6.csv  tgp_chr14.csv  tgp_chr19.csv  tgp_chr8.csv  trees-files-stats.csv
experiments/measurements/: sf-vs-ts-speed-tgp.csv  sfkit-vs-tskit-bench.csv  sgdp_chr18.csv  tgp_chr17.csv  tgp_chr20.csv  tgp_chr21.csv  tgp_chr22.csv
experiments/scripts/: benchmark-tskits-python-only-funcs.py  benchmark-tskits-tajimas-d.py  common.R  compute-stats.sh  extract-trees-files-stats.py  labels-colors-and-shapes.R  plot-datastructure-stats.R  plot-ds-stats.R  plot-sf-vs-ts-speed.R  plot-sfkit-vs-tskit-bench.R  plot-speedup.R  plot-trees-files-stats.R
include/sfkit/: SuccinctForest.hpp  assertion_levels.hpp  tskit.hpp
include/sfkit/bp/: BPCompressedForest.hpp  BPForestCompressor.hpp  Parens.hpp
include/sfkit/dag/: DAGCompressedForest.hpp  DAGForestCompressor.hpp
include/sfkit/graph/: AdjacencyArrayGraph.hpp  BPCompressedForest.hpp  CompressedForest.hpp  Edge.hpp  EdgeListGraph.hpp  ForestCompressor.hpp  SubtreeHashToNodeMapper.hpp  SubtreeHasher.hpp  TsToSfNodeMapper.hpp  balanced_parenthesis.hpp  common.hpp  primitives.hpp
include/sfkit/include-redirects/: cereal.hpp  hopscotch_map.hpp  hopscotch_set.hpp  sdsl.hpp
include/sfkit/io/: CompressedForestIO.hpp  vector_serialization.hpp
include/sfkit/load/: BPForestCompressor.hpp  CompressedForestIO.hpp  ForestCompressor.hpp  SubtreeHashToNodeMapper.hpp  SubtreeHasher.hpp  TsToSfNodeMapper.hpp  vector_serialization.hpp
include/sfkit/samples/: BPNumSamplesBelow.hpp  DAGNumSamplesBelow.hpp  NumSamplesBelow.hpp  NumSamplesBelowAccessor.hpp  NumSamplesBelowFactory.hpp  SampleSet.hpp  primitives.hpp  types.hpp
include/sfkit/sequence/: AlleleFrequencies.hpp  AlleleFrequencySpectrum.hpp  GenomicSequence.hpp  GenomicSequenceFactory.hpp  Mutation.hpp  Sequence.hpp  TSKitSiteToTreeMapper.hpp
include/sfkit/stats/: AlleleFrequencySpectrum.hpp  Divergence.hpp  Diversity.hpp  Fst.hpp  LCA.hpp  NumSegregatingSites.hpp  PattersonsF.hpp  TajimasD.hpp
include/sfkit/tskit/: ChangedNodesView.hpp  ChildrenView.hpp  EulertourView.hpp  MutationsView.hpp  TSKitTree.hpp  TSKitTreeSequence.hpp  tskit.hpp
include/sfkit/utils/: BufferedSDSLBitVectorView.hpp  always_false_v.hpp  bitpacking.hpp  checking_casts.hpp  concepts.hpp  literals.hpp  tuple_transform.hpp  xxhash.hpp
include/tdt/: SuccinctForest.hpp  assertion_levels.hpp  checking_casts.hpp  sequence-forest.hpp  succinct-forest.hpp  tskit.hpp
include/tdt/graph/: AdjacencyArrayGraph.hpp  CompressedForest.hpp  EdgeListGraph.hpp  adjacency-array-graph.hpp  common.hpp  compressed-forest.hpp  edge-list-graph.hpp  num-samples-below.hpp
include/tdt/load/: CompressedForestIO.hpp  ForestCompressor.hpp  SubtreeHashToNodeMapper.hpp  TsToSfNodeMapper.hpp  compressed-forest-serialization.hpp  file-names-from-file.hpp  forest-compressor.hpp  subtree-id-2-node-mapper.hpp  subtree-id.hpp  ts-node-2-sf-subtree-mapper.hpp
include/tdt/samples/: NumSamplesBelow.hpp  SampleSet.hpp  num-samples-below.hpp  sample-set.hpp
include/tdt/sequence/: AlleleFrequencies.hpp  AlleleFrequencySpectrum.hpp  GenomicSequence.hpp  Mutation.hpp  (+10 more)
scripts/: fetch-results  generate-long-sequence-ts.py
src/: CMakeLists.txt  SuccinctForest.cpp
src/tskit/: CMakeLists.txt  ChangedNodesView.cpp  ChildrenView.cpp  EulertourView.cpp  TSKitTree.cpp  TSKitTreeSequence.cpp
stdpopsim/: simulate.sh
tests/: CMakeLists.txt  test-adjacency-array-graph.cpp  test-allele-frequencies.cpp  test-allele-frequency-spectrum.cpp  test-bp-forest-compression.cpp  test-buffered-sdsl-bit-vector-view.cpp  test-compressed-forest-serialization.cpp  test-compressed-forest.cpp  test-divergence.cpp  test-diversity.cpp  test-edge-list-graph.cpp  test-genomic-sequence-storage.cpp  test-genomic-sequence.cpp  test-lca.cpp  test-load-from-tree-sequence.cpp  test-num-samples-below.cpp  test-pattersons-f-stats.cpp  test-sample-set.cpp  test-segregating-sites.cpp  test-tajimas-d.cpp  test-tskit-site-to-tree-mapper.cpp  test-tskit-wrapper.cpp  test-xxhash.cpp
tests/cmake/: EasyCatch.cmake
tests/mocks/: TsToSfMappingExtractor.hpp
tests/tskit-testlib/: testlib.cpp  testlib.hpp
tugboat/: assert_files.py  config.py  dataset.py  deps.py  git_rev.py  log.py  machine_id.py  shell.py
tugboat/cli/: benchmark.py  build.py  clean.py  collect.py  compile.py  compress.py  download.py  ls.py  plot.py  plot_benchmarks.py  plot_tree_stats.py
(+4 files in other folders)
